--- a/Media Queries/media.css
+++ b/Media Queries/media.css
@@ -1,19 +1,6 @@
-@media only screen and (min-width: 400) {
-    #contianer {
-        width: 200px;
-        height: 200px;
-        background-color: yellow;
-        border: 2px solid black;
-        margin: auto;
-        color: black;
+@media only screen and (max-width: 400px){
+    body {
+        background-color: orangered;
     }
-    
-    #child {
-        width: 150px;
-        height: 150px;
-        background-color: blueviolet;
-        border: 2px solid black;
-        color: white;
-        margin: auto;
-    }
+
 }
